# aip

./: CONTRIBUTING.md  PUBLISH.md  README.md  pyproject.toml
src/aip/: processors.py
tests/: test_prompt_processor.py
