[project]
name = "aipp"
version = "0.1.0"
description = "Generativ AI Prompt Processor"
authors = [
    { name = "Ove Ranheim", email = "oranheim@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
test = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py"]
