[project]
name = "aipp"
version = "0.1.1"
description = "Generativ AI Prompt Processor"
authors = [
    { name = "Ove Ranheim", email = "oranheim@gmail.com" }
]
requires-python = ">=3.11"
readme = "README.md"
homepage = "https://github.com/descoped/aipp"
repository = "https://github.com/descoped/aipp"
keywords = ["ai", "llm", "prompt", "processor"]

dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
test = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py"]
